2001-06-20  Braden McDaniel <braden@endoframe.com>

        * In the JavaScript API implementation, store the pointer to the
          Script object as private data in the JSContext rather than as
          a property of the global object.

        * Use JS_NewRuntime() and JS_DestroyRuntime() instead of the
          deprecated JS_Init() and JS_Finish() functions.

        * Factored means of constructing a VrmlField type from its
          corresponding JavaScript class into separate per-type
          functions.

2001-06-20  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Update *.dsp and *.dsw to support OpenVRML WIN32 DLL and
          remove libjs.dsp and libjs.dsw as these are no longer
          needed. ANTLR parser generator is no longer needed as this 
          will use the generated sources which come with the 
          distribution.

        * Update Makefiles for windows to support WIN32 DLLs and
          made javascript support, PNG image support and JPEG image
          support optional. 

2001-06-12  Braden McDaniel <braden@endoframe.com>

        * Use `std::map<>::value_type *' instead of
          `std::map<>::pointer' in VrmlNodePtr.h. Removed #ifdef for
          Win32.

2001-06-15  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixed problems for "using-declaration" in ScriptObject.cpp.

2001-06-14  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for object construction in several places in 
          vrml97node.cpp, VrmlScene.cpp, VrmlNodeType.cpp and
          VrmlNodeScript.cpp. MSVC++6.0 does not like the way it was.

        * Fixed type mismatch in VrmlNodeProto.cpp and VrmlNodeProto.h

2001-06-13  S. K. Bose  <bose@pavan.barc.ernet.in>

        * In "VrmlNodePtr.h" as "pointer" is not a member of std::map 
          (though it is in standard) in containers library of MSVC++6.0,
          "value_type" can be used (it is also in standard). Though 
          I have used "WIN32" preprocessing directive for making 