@@ -1,3 +1,14 @@
+2001-06-24  Braden McDaniel <braden@endoframe.com>
+
+        * Added a private header `private.h' for macros used in the
+          implementation.
+
+        * Got rid of the pre-linking step for libantlr. Now we just
+          import all of libantlr's library objects into the libopenvrml.
+          We could be a bit more judicious about this, but libantlr
+          needs to be refactored before we can see a significant size
+          savings.
+
 2001-06-20  Braden McDaniel <braden@endoframe.com>
 
         * In the JavaScript API implementation, store the pointer to the
